# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1350 2013/07/22 00:53:35 mpagano Exp $

  22 Jul 2013; Michael Pagano <mpagano@gentoo.org>
  -git-sources-3.10_rc1.ebuild, -git-sources-3.10_rc2.ebuild,
  -git-sources-3.10_rc3.ebuild, -git-sources-3.10_rc4.ebuild,
  -git-sources-3.10_rc5.ebuild, -git-sources-3.10_rc6.ebuild,
  -git-sources-3.10_rc7.ebuild:
  Drop old

*git-sources-3.11_rc2 (21 Jul 2013)

  21 Jul 2013; Tom Wijsman <TomWij@gentoo.org> +git-sources-3.11_rc2.ebuild:
  Linux patch 3.11-rc2.

*git-sources-3.11_rc1 (15 Jul 2013)

  15 Jul 2013; Tom Wijsman <TomWij@gentoo.org> +git-sources-3.11_rc1.ebuild:
  Linux patch 3.11-rc1.

*git-sources-3.10_rc7 (22 Jun 2013)

  22 Jun 2013; Agostino Sarubbo <ago@gentoo.org> +git-sources-3.10_rc7.ebuild:
  Version bump to 3.10_rc7

*git-sources-3.10_rc6 (16 Jun 2013)

  16 Jun 2013; Tom Wijsman <TomWij@gentoo.org> +git-sources-3.10_rc6.ebuild:
  Linux patch 3.10_rc6.

  09 Jun 2013; Mike Frysinger <vapier@gentoo.org> metadata.xml:
  Add upstream CPE tag (security info) from ChromiumOS.

*git-sources-3.10_rc5 (09 Jun 2013)

  09 Jun 2013; Agostino Sarubbo <ago@gentoo.org> +git-sources-3.10_rc5.ebuild:
  Version bump to 3.10-rc5

*git-sources-3.10_rc4 (03 Jun 2013)

  03 Jun 2013; Tom Wijsman <TomWij@gentoo.org> +git-sources-3.10_rc4.ebuild:
  Linux patch 3.10_rc4; generated by difference between unpacked
  linux-3.9.tar.xz and linux-3.10-rc4.tar.xz contents (diff -urN linux-3.9
  linux-3.10-rc4), rehosted on Gentoo Infrastructure.

*git-sources-3.10_rc3 (29 May 2013)

  29 May 2013; Agostino Sarubbo <ago@gentoo.org> +git-sources-3.10_rc3.ebuild:
  Version bump to 3.10_rc3

*git-sources-3.10_rc2 (20 May 2013)

  20 May 2013; Michael Pagano <mpagano@gentoo.org>
  +git-sources-3.10_rc2.ebuild:
  Version bump

*git-sources-3.10_rc1 (14 May 2013)
