@@ -4,14 +4,16 @@ Hash: SHA256
 DIST linux-3.10.tar.xz 73175088 SHA256 df27fa92d27a9c410bfe6c4a89f141638500d7eadcca5cce578954efc2ad3544 SHA512 5fb109fcbd59bf3dffc911b853894f0a84afa75151368f783a1252c5ff60c7a1504de216c0012be446df983e2dea400ad8eeed3ce04f24dc61d0ef76c174dc35 WHIRLPOOL e7c0ccc2231e430b831218fc66f1940d095d2d5447d391329c6a7373d4a1d16708f64778b32e4847802ee2dae4fcf7cb67a1238fd4eb204fd0c4bce2d8134053
 DIST patch-3.11-rc1.xz 6250936 SHA256 3f270bc3abad68a881a706f584ef978ff3cc9099a9edba7b6d62acc9ec4f1f55 SHA512 5c3cf00b65008adc4fae31a410102ae2476e7f71df3936b901f2422c9f146f68360dca1a36f323d1736a3419fd51a00d6040e84a2f53a0809db9080561332fb2 WHIRLPOOL 1133e10e8547364173421c159825dd39edf377607e7c44ee796af61e44fcd64318f4432ec7609ec48012f12ba9e12d80429cae632023cef29a583c74a1e2fc54
 DIST patch-3.11-rc2.xz 6665160 SHA256 2bcee1dd68e5fab8c3db9738938b37b237dbe56b9b9e84f0108d5773a3804ce0 SHA512 15de5f52cb62bd24d20dc0d9ea1f1286a0b3a6ee12e5daf023935f83ba48ac5eba483d5e68d4138cd1e74e4779742e921c36f27f153c48e63f63a0eef052335c WHIRLPOOL dc872edb0f4331ec8d43e4c59cb9d2115fcf0d1dbfbfaf33c1f0b35ff986738df989e87c5db60d0195dcc2b35f3d12c8e2d81f294173be94424da3510f7b3fff
+DIST patch-3.11-rc3.xz 6767140 SHA256 ea7b0faf5868711388452ae228197f01a0aed09917d3ed030082f84ebf4bf19e SHA512 7fd4d5ce00f9d6ad2b2751ef1b3774b853d5c0c3e8f4b9cd417b42d84012d6a6cb8e17dcebcc9d1c9ab98f3bda77b9aa49bfa5a0183470e3c8389405289bdbd7 WHIRLPOOL ea1a8a18b3d39619f303d11526097759e82d6199c18ea24605b9c3394ffa55d0eec0592c941a546db9b530d6eb8e65d08ede0f9305abdc36fe2354586bdfe00f
 EBUILD git-sources-3.11_rc1.ebuild 1193 SHA256 24df3e37800b6e973393e59f1becc32f5bc665a8bc6bc9a8febd4cb2905f210e SHA512 4e12cfad79d99e789d257b746489bb339ebc9e86fbfacb8b5bdccf6c6599cae5d8aef0cec3555f759e21abfc0c9d6704a547f96e75876c22275864e698cd59c1 WHIRLPOOL 8f8a122fe5afe65f86c3535fa624a1ab8b2973f80232f8134e5ed7b5b0d6a18bb3b7a348f40c7410969547832d22620df2458b9df0a2613e86794bf6e7c282f0
 EBUILD git-sources-3.11_rc2.ebuild 1193 SHA256 49d2f89e7f4db32ec78c7f8c301cafc93f371de5e8121b2e12722437ec65aafc SHA512 71f4f1dc26135da97cf730fd45fb4280d5aafb9f96d141a719a2eca853eaed2a31c03812f609da6c51705b6c08d25b6c2c7b77a2bb4ce32f4ce7c1151ff918b8 WHIRLPOOL 39c0b7ceaea5ab255b231b32236648f8e1abb7a93888361a1cb7c7180e10413d510ab02f55ba0acc891f55a03142e86eb3e2ee54d333cbc641d61baf75eaa9c8
-MISC ChangeLog 34499 SHA256 605d49d2511a91a2b92287eca5188d5878f782c932b95ee30f19b03b75fa4613 SHA512 2681468f765dcefe53cab0ee103718d2e56a497453e4e35a4c4947171fe76294d9ec258d1880f6053d816284fa12a3d4d39c73881265ad981adf70f6cbbb5265 WHIRLPOOL 264d8a2d74b2e0db46ae661da4aba3d07624d2b7097c2742e2b30dc91d9c818245752fd76cfac6786c8917a2dbdf3dfc219a29e92f16638aa4d599cbd0cf33aa
+EBUILD git-sources-3.11_rc3.ebuild 1194 SHA256 037b1eccaa8121100ab99d9902ebb80ba23087af178f8655acee17d13ee0598a SHA512 8b8229287d446c5bbb5b4efc007d63ccdcaf0af4873b440c2ae05c4e74a20689a06937e28b519d22395412100e3655060ff656e61f3278070dcb3d2599ead712 WHIRLPOOL 11bbb842ee8ae421506db5b436a66da7398254027568c0f11c01c9b1b6bc336081feaa85507cbe36984fdfa2c748f1b83bc54b4e1c3f9bb2cc9ba553d7294772
+MISC ChangeLog 34635 SHA256 26998ea8fd15ae13e7a14a31be3bbf8c5553d4b3394fc6977095f44a0f55294b SHA512 deef587ceac20d1ba2d1f35bacf6cb348d37e87dad8039472696a4408d106569e339c63544f2e2d55e04bf8ef94020f4871feb7c5af34e5771fd76ae37296284 WHIRLPOOL 0f81a2ba8d6702d4d89c8213918c21bbbc422d8916fb391d95dbb30d06b7635fc26972e72ec115e6b817ba4c4a6c38633d2b2a1052821c864c19c749aeb43406
 MISC metadata.xml 533 SHA256 85e5cf7dda5967132711e350d6b4194f7e2c5bece3732ce74d912c28f0afb3bc SHA512 561f9e4a87bc3518664912bf9e3dd6d83366a154038e3c2a901d8275a2b3a40e711e47ea555eacbed816cea36a174ffe2a7f63895ca006491f4e1efec5f7a27e WHIRLPOOL d4dfacd52a04d2737b3abb2a7d4f6772980a97759dae6fa80bef1863b356902612a0702cd9894148145f122771bfb977c48c086cc2ebc67ea07300c64b7d7313
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlHsgpMACgkQPDPGULV25ONL7ACfTcuM6DzbyJBQ4ouBZMXA+6cw
-tU8AmwVVPts7Sxfrx7uW4SS4hdZ4iEIK
-=7Dqe
+iEYEAREIAAYFAlH2ZckACgkQPDPGULV25OO/tQCfYT6C1QNDx7oGMvD/QxJ97PV0
+nE8Anjn7zI7TyMwHEYZq8CHQgvOG41jQ
+=PMyt
 -----END PGP SIGNATURE-----
