@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1350 2013/07/22 00:53:35 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1351 2013/07/29 12:53:25 mpagano Exp $
+
+*git-sources-3.11_rc3 (29 Jul 2013)
+
+  29 Jul 2013; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-3.11_rc3.ebuild:
+  Version bump
 
   22 Jul 2013; Michael Pagano <mpagano@gentoo.org>
   -git-sources-3.10_rc1.ebuild, -git-sources-3.10_rc2.ebuild,
